dynamic rendering of html through layout

--- a/myApp/firstApp/templates/firstApp/firstAppIndex.html
+++ b/myApp/firstApp/templates/firstApp/firstAppIndex.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First App</title>
-</head>
-<body>
-    <h1>first app page </h1>
-</body>
-</html>
+{% extends 'layout.html' %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<h3>firstApp home page </h3>
+
+{% endblock %}
