--- a/myApp/templates/index.html
+++ b/myApp/templates/index.html
@@ -1,14 +1,6 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static 'style.css' %}">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hello everyone
-    </h1>
-</body>
-</html>
+{% extends 'layout.html' %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<h3>this is h3 title of home page</h3>
+
+{% endblock %}
