tailwind css setup

--- a/myApp/templates/index.html
+++ b/myApp/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<h3>this is h3 title of home page</h3>
+<h3 class="bg-amber-500 text-2xl text-center text-blue-900">this is h3 title of home page</h3>
 
 {% endblock %}
