--- a/myApp/firstApp/templates/firstApp/firstAppIndex.html
+++ b/myApp/firstApp/templates/firstApp/firstAppIndex.html
@@ -1,6 +1,20 @@
-{% extends 'layout.html' %}
-{% block title %}Home{% endblock %}
-{% block content %}
-<h3>firstApp home page </h3>
+{% extends 'layout.html' %} 
+{% block title %}Home{% endblock %} 
+{% block content%}
+<h3>firstApp home page</h3>
+<div class="grid grid-cols-4 gap-4">
+  <div class="grid grid-rows-2 grid-flow-col gap-4">
+    {% for details in detail_list %}
+    <li>{{details.first_name}}</li>
+    <a href="{% url 'detail_with_id' details.id %}">
+      <button
+        class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 rounded"
+      >
+        id {{details.id}}
+      </button>
+    </a>
+    {% endfor %}
+  </div>
+</div>
 
 {% endblock %}
